Achieve exactly 100% test coverage across all packages & update documentation